# sentiment-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/sentiment_api/: main.py  model.py
